cmake_minimum_required(VERSION 3.19)
project(my_hpx_project CXX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(Tcmalloc_INCLUDE_DIR /usr/include/gperftools)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(HPX)
add_executable(mat_mul mat_mul.cpp)
target_link_libraries(mat_mul HPX::hpx HPX::wrap_main HPX::iostreams_component)

find_package(MPI)
if(MPI_FOUND)
  add_executable(optimized_merge EXCLUDE_FROM_ALL opt_sample_merge.cpp)
  target_link_libraries(optimized_merge MPI::MPI_CXX)

  add_executable(naive_sample_merge EXCLUDE_FROM_ALL naive_sample_merge.cpp)
  target_link_libraries(naive_sample_merge MPI::MPI_CXX)
endif()
